--- a/_config.yaml
+++ b/_config.yaml
@@ -8,3 +8,6 @@ description:
 github_username:  
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+
+paginate: 5 # amount of posts to show
+paginate_path: /page:num/
